Beta AcousticMobilePush build: 3.8.24
Beta AcousticMobilePush Change Notes:
Bug Fixes

- Currently the Android SDK is setting a default Large icon instead of leaving the space empty when a push notification comes in without the LargeIcon parameter. The source of true for a Large icon should be the notification itself and not the SDK. Sending a notification with or without a Large icon should present the expected icon behavior.

Improvements

- A boolean config switch for Google Play Install Referrer Support.
- Rename ic_launcher.png to ic_launcher_secondary.png
- Adjust NotificationUtility to support Flutter.
- Proper Android notification icons are designed to be white on a transparent background with no coloration, however the notification builder api support applying a color which then transforms the icons to the background color noted and instead of white, the icon design will be black.

MceSdk.getNotificationsClient().getNotificationsPreference().setIconColor(getApplicationContext(),{color});

which will be used in our notification builder code. If no color set, then the color attribute of the notification builder should be omitted.
- Add improvement for Inapp Crash When Icon Attribute is Empty:
	- check for an empty icon value and render the inapp message sans icon
	- check the icon value and if the graphical resource doesn’t exist, render the inapp message sans icon
- MceConfig.json has been removed from each plugin.

Our environment for this release:

- Android Studio Hedgehog | 2023.1.1 Patch 1
- MacOS 14.0
- target API level 21 to 34

Known Issues

- None.

--- a/samples/Demo/app/src/main/AndroidManifest.xml
+++ b/samples/Demo/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
     <!-- BLUETOOTH_SCAN is optional. It is only required if iBeacons are supported -->
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <queries>
         <!-- Required for handling notifications that open the device's dialer app -->
         <intent>
